# Vim

./: .gitignore  _vimrc
vimfiles/: filetype.vim
vimfiles/autoload/: general.vim  generalScript.vim  melcorScript.vim  simmerScript.vim
vimfiles/doc/: learn.vim  markdown.md
vimfiles/doc/vsc-for/: vsc-for.md
vimfiles/doc/vsc-for/ifx-executable-project-template/: config.md  template.gitignore
vimfiles/doc/vsc-for/ifx-executable-project-template/cmake/: CMakeLists.txt
vimfiles/ftplugin/: fortran.vim  markdown.vim  melcor.vim  relap.vim  relapOutdta.vim  simmer.vim  webvtt.vim
vimfiles/syntax/: melcor.vim  relap.vim  simmer.vim
vimfiles/ultisnips/: markdown.snippets  melcor.snippets
